# SalaryGo

./: .gitignore  AGENTS.md  MVP_REQUIREMENTS.md  README.md  REQUIREMENTS.md  pyproject.toml  run_salarygo.py
docs/: M1_PROFILE.md  M2_LEDGER.md  M3_MARKET_DATA.md  M4_CANDIDATE_POOL.md  M5_SCORING.md  M6_M10_IMPLEMENTATION.md
docs/acceptance/: M0_ACCEPTANCE.md  M10_ACCEPTANCE.md  M1_ACCEPTANCE.md  M2_ACCEPTANCE.md  M3_ACCEPTANCE.md  M4_ACCEPTANCE.md  M5_ACCEPTANCE.md  M6_ACCEPTANCE.md  M7_ACCEPTANCE.md  M8_ACCEPTANCE.md  M9_ACCEPTANCE.md
examples/: allocation.fixture.json  backtest.fixture.json  candidates.fixture.json  ledger.example.json  market.fixture.json  profile.example.json  scoring.fixture.json
src/salarygo/: __init__.py  agent.py  allocation.py  application.py  backtest.py  candidates.py  cli.py  ledger.py  market.py  profile.py  scoring.py  server.py  storage.py
tests/: __init__.py  test_agent.py  test_allocation.py  test_application.py  test_backtest.py  test_candidates.py  test_cli.py  test_ledger.py  test_market.py  test_module_integration.py  test_profile.py  test_scoring.py  test_server.py  test_storage.py
web/: app.js  index.html  styles.css
